Test/my_float2.out
Error type B at Line 3: syntax error
Error type A at Line 5: Bad FLOAT format: "1.05e"
Error type A at Line 7: Bad FLOAT format: "5."
Error type A at Line 9: Bad FLOAT format: ".5"
