Test/my_float2.cmm
float __add__()
{
    .e-4;
    i = 1;
    1.05e;
    i = 1;
    5.;
    i = 1;
    .5;
    i = 1;
    0009.9;
}
